# clash-shockwaves-testing

./: README.md  RELEASING.md
.github/workflows/: cargo-fmt.yml  haddock.yml  haskell-docs.yml  haskell-fmt.yml  haskell-release-docs.yml  haskell-test.yml  main.yml  surfer-docs.yml  surfer-fmt-lint.yml  surfer-release-compile.yml  surfer-wasm.yml  surfer.yml
changelog/: 2026-04-04_T18:04:59_ADDED_improved_setup_howto  2026-06-09_T22:06:18_FIXED_replaced_unknown  2026-08-16_T15:08:38_ADDED_added_negation_precedence_option  2026-09-17_T15:09:50_ADDED_advanced_howto  2026-26-04_T17:26:31_FIXED_fixed_maybe_just_style_name  2026-26-16_T14:26:06_ADDED_added_precedence_howto  2026-29-04_T17:29:26_CHANGED_allow_clash_182  2026-47-21_T16:47:25_CHANGED_add_config_to_setup  2026-50-13_T00:50:07_ADDED_link_howtos_in_haddock  2026-51-19_T14:51:29_CHANGED_split_bitpart_slice_and_input  2026-56-12_T13:56:40_ADDED_more_number_options  README.md  aggregate-entries.py  mk-entry.py  util.py
docs/: HOWTO.md
docs/howto/: ADVANCED.md  CONFIG.md  CONSTANT.md  DOMAINS.md  EXTRA_INFO.md  FLOWCHART.md  GADTS.md  LUTS.md  MULTIDOM.md  NUMBER.md  PREC.md  README.md  SETUP.md  START.md  STYLES.md  WAVEFORM.md
docs/howto/config/: shockwaves.toml
docs/reference/: FILE_FORMAT.md
haskell/: README.md
shockwaves/: .gitignore  LICENSE  README.md  cabal.project  format.sh  fourmolu.yaml  hie.yaml  shockwaves.cabal  stack.yaml
shockwaves/prims/common/: Clash_Shockwaves_Trace.primitives.yaml
shockwaves/src/Clash/: Shockwaves.hs
shockwaves/src/Clash/Shockwaves/: BitList.hs  LUT.hs  Style.hs  Trace.hs  Waveform.hs
shockwaves/src/Clash/Shockwaves/Internal/: Binary.hs  BitList.hs  Translator.hs  Types.hs  Util.hs  Waveform.hs
shockwaves/src/Clash/Shockwaves/Internal/TH/: Waveform.hs
shockwaves/src/Clash/Shockwaves/Internal/Trace/: CRE.hs
shockwaves/src/Clash/Shockwaves/Style/: Colors.hs
shockwaves/src/Clash/Shockwaves/Trace/: CRE.hs
shockwaves/tests/: tests.hs  vcd.hs
shockwaves/tests/Tests/: Structure.hs  Types.hs
surfer_shockwaves/: Cargo.toml  EXAMPLE_CONFIG.toml  README.md  VERSION  compile.sh
surfer_shockwaves/src/: cache.rs  config.rs  convert.rs  data.rs  lib.rs  plugin.rs  state.rs  structure.rs  stylevars.rs  translate.rs
