cabal-version:       2.4
name:                shockwaves
version:             2.1.0
license:             BSD-2-Clause
author:              Marijn Adriaanse <marijn@qbaylogic.com>
maintainer:          QBayLogic B.V. <devops@qbaylogic.com>

Data-files:
  prims/common/Clash_Shockwaves_Trace.primitives.yaml

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    InstanceSigs
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables these optimizations. Note that the fields will
    -- remain strict.
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base,
    Cabal,

    containers,

    time,
    binary,
    bytestring,
    text,
    deepseq,
    aeson,
    colour,
    filepath,
    split,
    extra,
    integer-logarithms,
    data-default,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.8.2 && < 1.10,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat


library
  import: common-options
  cpp-options: -DCABAL
  hs-source-dirs: src
  exposed-modules:
    Paths_shockwaves
    Clash.Shockwaves
    Clash.Shockwaves.Waveform
    Clash.Shockwaves.LUT
    Clash.Shockwaves.Style
    Clash.Shockwaves.Style.Colors
    Clash.Shockwaves.Trace
    Clash.Shockwaves.Trace.CRE
    Clash.Shockwaves.BitList
    Clash.Shockwaves.Internal.Types
    Clash.Shockwaves.Internal.Waveform
    Clash.Shockwaves.Internal.BitList
    Clash.Shockwaves.Internal.Translator
    Clash.Shockwaves.Internal.Util
    Clash.Shockwaves.Internal.Trace.CRE
  default-language: Haskell2010

-- Builds the executable 'clash', with shockwaves project in scope
executable clash
  main-is: bin/Clash.hs
  default-language: Haskell2010
  Build-Depends: base, clash-ghc, shockwaves
  if !os(Windows)
    ghc-options: -dynamic

-- Builds the executable 'clashi', with shockwaves project in scope
executable clashi
  main-is: bin/Clashi.hs
  default-language: Haskell2010
  if !os(Windows)
    ghc-options: -dynamic
  build-depends: base, clash-ghc, shockwaves

-- Run a bunch of tests about translators and translations
test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: tests.hs
  other-modules:
    Tests.Structure
    Tests.Types
  build-depends:
    shockwaves,
    tasty >= 1.2 && < 1.6,
    tasty-hunit,
    tasty-th

-- Produce a VCD output of many different types to check in Surfer / use to test Surfer
test-suite test-vcd
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: vcd.hs
  other-modules:
    Tests.Types
  build-depends:
    shockwaves,
    directory
