[package]
name = "surfer_shockwaves"
version = "2.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
camino = "1.2.1"
egui = "0.32.3"
extism-pdk = "1.4.1"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surfer-translation-types.git = "https://gitlab.com/surfer-project/surfer.git"
